<resources>
    <string name="app_name">SelfAID</string>
    <string name="database_name">selfaid.db</string>
    <string name="database_path">database/selfaid.db</string>

    <!-- Main menu -->
    <string name="Menu_Challenges_Btn">Wyzwania</string>
    <string name="Menu_Emotions_Journal_Btn">Dziennik Emocji</string>
    <string name="Menu_About_Us_Btn">O nas</string>

    <!-- Emotions journal - menu -->
    <string name="EJ_Add_New_Entry_Btn">Dodaj wpis</string>

    <!-- Emotions journal - new entry -->
    <string name="EJ_Entry_Date">Data:</string>
    <string name="EJ_Entry_Date_Hint">DD/mm/YY</string>
    <string name="EJ_Entry_Choose_Date_Btn">Wybierz datę</string>
    <string name="EJ_Entry_Title">Tytuł:</string>
    <string name="EJ_Entry_Title_Hint">Tytuł jest opcjonalny</string>
    <string name="EJ_Entry_Choose_Emotion">Wybierz emocję</string>
    <string name="EJ_Entry_Emotion_Describtion_Btn">Opis emocji</string>
    <string name="EJ_Entry_Save_Btn">Zapisz</string>
    <string name="EJ_Entry_Add_New_Page_Btn">Dodaj kolejną emocję</string>

    <string name="Date">%1$s / %2$s / %3$d</string>

    <!-- Emotions journal - description of emotion -->
    <string name="EJ_EmotionDescription_Emotion_Name">Emocja</string>
    <string name="EJ_Emotion_Descripiton_Describtion">Opis emocji</string>
    <string name="EJ_Emotion_Descripiton_Back_Btn">Powrót</string>

    <!-- Emotions journal - saved entry -->
    <string name="Blank_Topic">Brak tematu</string>
    <string name="No_Respond">Brak odpowiedzi</string>
    <string name="Checked">Zaznaczono</string>
    <string name="Unchecked">Nie zaznaczono</string>
    <string name="None_Checked">Nie zaznaczono żadnej z opcji</string>


    <!-- Exercises -->
    <string name="Type_Answer">Wpisz odpowiedź</string>
    <string name="Progress_Scale_Question">%1$d/%2$d</string>

    <!-- Choose date dialog -->
    <string name="Date_Dialog_Cancel">Anuluj</string>
    <string name="Date_Dialog_Save">Zatwierdź</string>
    <string name="Date_Dialog_Choose_Date">Wybierz datę</string>
    <string name="EJ_List_Entry_Name">Data\nTytuł</string>

    <!-- Delete dialog -->
    <string name="Delete_Dialog_Question">Czy na pewno chcesz usunąć wpis?</string>
    <string name="Delete_Dialog_Confirm">Tak</string>
    <string name="Delete_Dialog_Cancel">Nie</string>


    <string name="EJ_SavedEntry_ChosenEmotion">Wybrana emocja:</string>

</resources>