<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".emotions_journal.fragments.EmotionsJournalNewEntry">

    <androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:fontFamily="@font/ubuntu_medium"
                        android:text="@string/EJ_Entry_Date"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvEJChosenDateSaved"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:fontFamily="@font/ubuntu_medium"
                        android:gravity="start"
                        android:hint="@string/EJ_Entry_Date_Hint"
                        android:padding="20dp"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnEJDatePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/EJ_Entry_Choose_Date_Btn"
                        tools:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:fontFamily="@font/ubuntu_medium"
                        android:text="@string/EJ_Entry_Title"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/etEJTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:cursorVisible="false"
                        android:fontFamily="@font/ubuntu_medium"
                        android:hint="@string/EJ_Entry_Title_Hint"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:padding="20dp"
                        tools:visibility="gone" />

                    <TextView
                        android:id="@+id/tvEJTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:fontFamily="@font/ubuntu_medium"
                        android:padding="20dp"
                        android:textSize="18sp"
                        android:visibility="gone"
                        tools:visibility="visible" />


                </LinearLayout>

                <TextView
                    android:id="@+id/tvChooseEmotion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:layout_weight="1"
                    android:fontFamily="@font/ubuntu_medium"
                    android:gravity="center"
                    android:text="@string/EJ_Entry_Choose_Emotion"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvChosenEmotion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="10"
                        android:fontFamily="@font/ubuntu_medium"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:visibility="gone"
                        tools:text="AAAA"
                        tools:visibility="visible" />

                    <Spinner
                        android:id="@+id/spnEJEmotions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="10"
                        android:padding="25dp"
                        tools:visibility="gone" />

                    <Button
                        android:id="@+id/btnEJEmotionInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/EJ_Entry_Emotion_Describtion_Btn" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvEJTasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnEJSaveEntry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="2dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/said_pink_dark"
                        android:clickable="false"

                        android:fontFamily="@font/ubuntu_medium"
                        android:text="@string/EJ_Entry_Save_Btn"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btnEJAddEmotion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="2dp"
                        android:layout_weight="1"

                        android:backgroundTint="@color/said_peach"
                        android:clickable="false"
                        android:fontFamily="@font/ubuntu_medium"
                        android:text="@string/EJ_Entry_Add_New_Page_Btn"
                        android:visibility="gone" />
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>