<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp">

    <TextView
        android:id="@+id/tvEmotionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/EJ_EmotionDescription_Emotion_Name"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <ScrollView
        android:id="@+id/svEmotionDescribtion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmotionName"
        app:layout_constraintVertical_bias="0.05">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEmotionDescribtion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/EJ_Emotion_Descripiton_Describtion"
                android:textSize="15sp"

                />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnEmotionDescribtionBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/EJ_Emotion_Descripiton_Back_Btn"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svEmotionDescribtion"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/said_pink_dark"
        />


</androidx.constraintlayout.widget.ConstraintLayout>